--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ find_package(catkin REQUIRED COMPONENTS
 	std_msgs
         image_transport
         cv_bridge
+        image_geometry
 )
 
 ## System dependencies are found with CMake's conventions
