--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,8 +13,8 @@ find_package(catkin REQUIRED COMPONENTS
     cv_bridge
     image_geometry
     tf
-    tf2_sensor_msgs
-    tf2_geometry_msgs
+ #   tf2_sensor_msgs
+ #   tf2_geometry_msgs
 )
 
 ## System dependencies are found with CMake's conventions
